Version 0.1
~~~~~~~~~~~
* Initial version.  consists of a merge of LogM5 and mk5agent

Version 0.3
~~~~~~~~~~~
* bug fixes.  quite usable now.
* more logging

Version 0.4
~~~~~~~~~~~
* more and improved logging
* usage

Version 0.5
~~~~~~~~~~~
* add mk5dir

Version 0.6
~~~~~~~~~~~
* fix stopmark5a hang -- mutex not unlocked
* fix die on quit -- unused %s

Version 0.7
~~~~~~~~~~~
* separate out proc.[ch]
* function to look for windrvr use
* periodically report VSNs
* This version is for NRAO-DiFX 1.1

Version 0.8
~~~~~~~~~~~
* Post NRAO-DiFX 1.1 branch