@@ -300,7 +300,7 @@ int main(int argc, char **argv)
 			if(!running("mpifxcorr"))
 			{
 				sprintf(logMessage, "Detected premature end of "
-					"mpifxcorr at %d\n", t);
+					"mpifxcorr at %s\n", ctime(&t));
 				Logger_logData(D->log, logMessage);
 				D->process = PROCESS_NONE;
 			}
